--- a/flow/src/main/resources/network_mainnet.conf.tmpl
+++ b/flow/src/main/resources/network_mainnet.conf.tmpl
@@ -26,6 +26,13 @@ oxygenium {
 
     leman-hard-fork-timestamp = 1680170400000 // Tue Mar 30 2023 12:00:00 GMT+0200
     rhone-hard-fork-timestamp = 1718186400000 // Wed Jun 12 2024 12:00:00 GMT+0200
+
+    genesis {
+      block-hash = "6aafe2bfb4d9e799ce37b11250d31d31665aaa752e67cde3771e8fd7c8912ead"  // Replace with your chosen genesis block hash
+      timestamp = 1733595651000  // Example timestamp for the new genesis block (e.g., Jan 1, 2023)
+      initial-balance = 10000000000  // Example initial balance
+      // Add other genesis block parameters as needed
+    }
   }
 
   discovery {
