--- a/flow/src/main/resources/network_mainnet.conf.tmpl
+++ b/flow/src/main/resources/network_mainnet.conf.tmpl
@@ -37,8 +37,10 @@ oxygenium {
 
   discovery {
     bootstrap = [
-      "212.5.194.56:9983",
-      "87.197.153.251:9983"
+      "bootstrap0.oxygenium.org:9983",
+      "bootstrap1.oxygenium.org:9983",
+      "bootstrap2.oxygenium.org:9984",
+      "bootstrap3.oxygenium.org:9984"
     ]
   }
 }
