--- a/flow/src/main/resources/network_mainnet.conf.tmpl
+++ b/flow/src/main/resources/network_mainnet.conf.tmpl
@@ -1,7 +1,7 @@
 oxygenium {
   broker {
-    broker-id = 1
-    broker-num = 2
+    broker-id = 0
+    broker-num = 1
     groups = 4
   }
 
@@ -37,8 +37,8 @@ oxygenium {
 
   discovery {
     bootstrap = [
-      "bootstrap0.oxygenium.org:9983",
-      "bootstrap1.oxygenium.org:9983"
+//      "bootstrap0.oxygenium.org:9983",
+//      "bootstrap1.oxygenium.org:9983"
     ]
   }
 }
