--- a/flow/src/main/resources/network_mainnet.conf.tmpl
+++ b/flow/src/main/resources/network_mainnet.conf.tmpl
@@ -38,7 +38,7 @@ oxygenium {
   discovery {
     bootstrap = [
       "bootstrap0.oxygenium.org:9983",
-      "bootstrap1.oxygenium.org:9983"
+//      "bootstrap1.oxygenium.org:9983"
     ]
   }
 }
