--- a/flow/src/main/resources/network_mainnet.conf.tmpl
+++ b/flow/src/main/resources/network_mainnet.conf.tmpl
@@ -37,7 +37,7 @@ oxygenium {
 
   discovery {
     bootstrap = [
-      "bootstrap0.oxygenium.org:9983",
+      "bootstrap0.oxygenium.org:9983"
 //      "bootstrap1.oxygenium.org:9983"
     ]
   }
