--- a/flow/src/main/resources/network_mainnet.conf.tmpl
+++ b/flow/src/main/resources/network_mainnet.conf.tmpl
@@ -23,7 +23,7 @@ oxygenium {
       "0000000000000000000ccf523e4fdd7bb414eee8d70bd993df317691302313df", # BTC 708794 block hash
       "a7f069215d1390b7f6af3f961030bb0957a31f7ad2315b35334841794d0c329d"  # ETH 13576188 block hash
     ]
-
+    client-version = "1.0.0"
     leman-hard-fork-timestamp = 1680170400000 // Tue Mar 30 2023 12:00:00 GMT+0200
     rhone-hard-fork-timestamp = 1718186400000 // Wed Jun 12 2024 12:00:00 GMT+0200
 
